Ensure black body background erase and paint in FastWindow native engine and Demo